# llms-sandbox

agent/: pyproject.toml
agent/agent/: command.py  data.py  main.py  specification.py  typedefs.py
album/: data.sql  pyproject.toml
album/album/: album.py
album/album/ai/: css.py
album/album/model/: album.py  track.py
album/album/utils/: album_data.py  files.py  url.py
album/album/web/: bandcamp.py  mb.py  (+1 more)
album/files/: index.html
album/prompts/: album_summary.md  css_extractors.md
basics/: pyproject.toml
basics/basics/: main.py
chat/bridge/: .gitignore  Makefile  pyproject.toml
chat/bridge/bridge/: ai.py  db.py  main.py
chat/cli/: go.mod  go.sum  interactive.go  main.go  model.go  view.go  websocket.go
chat/frontend/: Makefile  index.html  script.js  styles.css
scraping-worker/: main.py  pyproject.toml
scraping-worker/worker/: main.py  scheduler.py
typing/: .gitignore  data.sql  pyproject.toml
typing/ai_typing/: album.py  config.py  main.py
typing/ai_typing/ai/: css.py  event.py  music.py
typing/ai_typing/db/: utils.py
typing/ai_typing/db/repo/: album.py  genre.py  tag.py
typing/ai_typing/utils/: album_data.py  console.py  rss.py
typing/files/: styles.css
typing/prompts/: album_evaluation.md
typing/typing/: album.py  main.py  music.py  scrapping.py
typing/typing/ai/: music.py
typing/typing/db/repo/: album.py  site.py
typing/typing/utils/: rss.py
worker/: .gitignore  Makefile  pyproject.toml
worker/prompts/: joke.md
worker/worker/: ai.py  config.py  feeder.py  fibonacci.py  main.py  prompt.py  publisher.py
(+9 files in other folders)
