[project]
name = "ai_typing"
version = "0.1.0"
description = ""
authors = [
    {name = "xpakx",email = "55586470+xpakx@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.61.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "selectolax (>=0.3.27,<0.4.0)",
    "feedparser (>=6.0.11,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
