[project]
name = "bridge"
version = "0.1.0"
description = ""
authors = [
	{name = "xpakx",email = "55586470+xpakx@users.noreply.github.com"} 
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "openai>=2.8.1",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
